<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/recipe_category"/>
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/recipe_stars"/>
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_spa_black_24dp"
            android:title="@string/random_recommend"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setting"/>
        </menu>
    </item>

</menu>
